--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,13 +7,13 @@ author_profile: true
 
 <h2> Edward S. Rogers Sr. Department of Electrical & Computer Engineering, University of Toronto </h2>
 <ul>
-  <li><i>Mathematical Methods in Power Systems</i>, Teaching Assistant, Fall 2018; </li>
-  <li><i>Calculus III</i>, Teaching Assistant, Fall 2015-2018, Summer 2017; </li>
-  <li><i>Electricity & Magnetism</i>, Teaching Assistant, Winter 2016-2017. </li>
+  <li><i>Méthode mathématiques des réseaux électriques</i>, auxiliaire d'enseignement, Fall 2018; </li>
+  <li><i>Calcul III</i>, chargé de travaux dirigés, automnes 2015-2018, été 2017; </li>
+  <li><i>Électricité and magnétisme</i>, chargé de travaux dirigés, hivers 2016-2017. </li>
 </ul>
 
-<h2> Department of Engineering Physics, École Polytechnique de Montréal</h2>
+<h2> Département de génie physique, École Polytechnique de Montréal</h2>
 <ul>
-  <li><i>Mathematical Methods of Physics II</i>, Teaching Assistant,  Winter 2015; </li>
-  <li><i>Atomic & Molecular Physics</i>, Laboratory Teaching Assistant, Winter 2014. </li>
+  <li><i>Méthodes mathématiques de la physique II</i>, chargé de travaux dirigés,  hiver 2015; </li>
+  <li><i>Physique atomique et moléculaire</i>, chargé de laboratoires, hiver 2014. </li>
 </ul>
