--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,7 +7,7 @@ author_profile: true
 
 <h2> Edward S. Rogers Sr. Department of Electrical & Computer Engineering, University of Toronto </h2>
 <ul>
-  <li><i>Méthode mathématiques des réseaux électriques</i>, auxiliaire d'enseignement, Fall 2018; </li>
+  <li><i>Méthodes mathématiques des réseaux électriques</i>, auxiliaire d'enseignement, Fall 2018; </li>
   <li><i>Calcul III</i>, chargé de travaux dirigés, automnes 2015-2018, été 2017; </li>
   <li><i>Électricité and magnétisme</i>, chargé de travaux dirigés, hivers 2016-2017. </li>
 </ul>
