--- a/_pages/group.html
+++ b/_pages/group.html
@@ -15,7 +15,7 @@ author_profile: true
 <li>Katherine Palevsky, M.A.Sc. (génie énergétique) </li>
 <li>Feng Li, Ph.D. </li>
 <li>Anne-Marie Sauvageau, M.Ing. (génie énergétique) </li>
-<li>Félix Pellering, B.Ing.-stagiaire </li>
+<li>Félix Pellerin, B.Ing.-stagiaire </li>
 
 </ul>  
 
