--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,15 +5,10 @@ permalink: /teaching/
 author_profile: true
 ---
 
-<h2> Edward S. Rogers Sr. Department of Electrical & Computer Engineering, University of Toronto </h2>
-<ul>
-  <li><i>Méthodes mathématiques des réseaux électriques</i>, auxiliaire d'enseignement, automne 2018; </li>
-  <li><i>Calcul III</i>, chargé de travaux dirigés, automnes 2015-2018, été 2017; </li>
-  <li><i>Électricité et magnétisme</i>, chargé de travaux dirigés, hivers 2016-2017. </li>
-</ul>
 
-<h2> Département de génie physique, École Polytechnique de Montréal</h2>
+<h2> Département de génie électrique, Polytechnique Montréal</h2>
 <ul>
-  <li><i>Méthodes mathématiques de la physique II</i>, chargé de travaux dirigés,  hiver 2015; </li>
-  <li><i>Physique atomique et moléculaire</i>, chargé de laboratoires, hiver 2014. </li>
+  <li>ELE2700: <i>Analyse des signaux</i>,  Automne 2021; </li>
+  <li>ELE6953H: <i>Méthodes d'optimisation & d'apprentissage pour les réseaux électriques</i>, Hiver 2022. </li>
+  <li>ELE8456: <i>Réseaux de distribution</i> (coordinateur seulement), Hiver 2022. </li>
 </ul>
