--- a/_pages/group.html
+++ b/_pages/group.html
@@ -10,12 +10,20 @@ author_profile: true
 <h3>Membres du groupe</h3>
 
 <ul style="list-style-type:disc;">
-  
-<li>Marie-Christine Paré, M.A.Sc. (génie énergétique) </li>     
-<li>Feng Li, Ph.D. </li>
-<li>Anne-Marie Sauvageau, M.Ing. (génie énergétique) </li>
-<li>Félix Pellerin, B.Ing.-stagiaire </li>
 
+
+<li>Feng Li, Ph.D. (co-supervisé avec Prof. Ilhan Kocar) </li>
+<li>Fatemeh Rajabi, Ph.D. (Mathématiques appliquées, co-supervisé avec Prof. Antoine Legrain)</li>  
+<li>Marie-Christine Paré, M.A.Sc. (génie énergétique) </li>     
+<li>Philippe Maisonneuve, M.A.Sc. (génie énergétique) </li> 
+<li>Jean-Luc Lupien, M.A.Sc. </li>       
+<li>Anne-Marie Sauvageau, M.Ing. (génie énergétique) </li>
+<li>Ulrich Ephraim Yepmou Kepnang, M.Ing. (génie énergétique) </li>Laurella Dionisi
+<li>Laurella Dionisi, M.Ing. (génie énergétique) </li>
+<li>Inès Conde, M.Ing. (génie énergétique) </li>
+<li>Félix Pellerin, B.Ing.-stagiaire </li>  
+  
+  
 </ul>  
 
 
