--- a/_pages/group.html
+++ b/_pages/group.html
@@ -18,7 +18,7 @@ author_profile: true
 <li>Philippe Maisonneuve, M.A.Sc. (génie énergétique) </li> 
 <li>Jean-Luc Lupien, M.A.Sc. </li>       
 <li>Anne-Marie Sauvageau, M.Ing. (génie énergétique) </li>
-<li>Ulrich Ephraim Yepmou Kepnang, M.Ing. (génie énergétique) </li>Laurella Dionisi
+<li>Ulrich Ephraim Yepmou Kepnang, M.Ing. (génie énergétique) </li>
 <li>Laurella Dionisi, M.Ing. (génie énergétique) </li>
 <li>Inès Conde, M.Ing. (génie énergétique) </li>
 <li>Félix Pellerin, B.Ing.-stagiaire </li>  
