--- a/_pages/group.html
+++ b/_pages/group.html
@@ -13,7 +13,7 @@ author_profile: true
 
 
 <li>Feng Li, Ph.D. (co-supervisé avec Prof. Ilhan Kocar) </li>
-<li>Fatemeh Rajabi, Ph.D. (Mathématiques appliquées, co-supervisé avec Prof. Antoine Legrain)</li>  
+<li>Fatemeh Rajabi, Ph.D. (Mathématiques appliquées, co-supervisée avec Prof. Antoine Legrain)</li>  
 <li>Marie-Christine Paré, M.A.Sc. (génie énergétique) </li>     
 <li>Philippe Maisonneuve, M.A.Sc. (génie énergétique) </li> 
 <li>Jean-Luc Lupien, M.A.Sc. </li>       
