--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -10,5 +10,5 @@ author_profile: true
 <ul>
   <li>ELE2700: <i>Analyse des signaux</i>,  Automne 2021; </li>
   <li>ELE6953H: <i>Méthodes d'optimisation & d'apprentissage pour les réseaux électriques</i>, Hiver 2022. </li>
-  <li>ELE8456: <i>Réseaux de distribution</i> (coordinateur seulement), Hiver 2022. </li>
+  <li>ELE8456: <i>Réseaux de distribution</i> (coordonnateur seulement), Hiver 2022. </li>
 </ul>
