--- a/_pages/group.html
+++ b/_pages/group.html
@@ -16,7 +16,8 @@ author_profile: true
 <li>Fatemeh Rajabi, Ph.D. (Mathématiques appliquées, co-supervisée avec Prof. Antoine Legrain)</li>  
 <li>Marie-Christine Paré, M.A.Sc. (génie énergétique) </li>     
 <li>Philippe Maisonneuve, M.A.Sc. (génie énergétique) </li> 
-<li>Jean-Luc Lupien, M.A.Sc. </li>       
+<li>Jean-Luc Lupien, M.A.Sc. </li>      
+<li>Jean-William Lauzon, M.A.Sc. (co-supervisé avec Prof. Ilhan Kocar) </li>   
 <li>Anne-Marie Sauvageau, M.Ing. (génie énergétique) </li>
 <li>Ulrich Ephraim Yepmou Kepnang, M.Ing. (génie énergétique) </li>
 <li>Laurella Dionisi, M.Ing. (génie énergétique) </li>
