--- a/_pages/group.html
+++ b/_pages/group.html
@@ -12,19 +12,27 @@ author_profile: true
 <ul style="list-style-type:disc;">
 
 
-<li>Feng Li, Ph.D. (co-supervisé avec Prof. Ilhan Kocar) </li>
-<li>Fatemeh Rajabi, Ph.D. (Mathématiques appliquées, co-supervisée avec Prof. Antoine Legrain)</li>  
-<li>Marie-Christine Paré, M.A.Sc. (génie énergétique) </li>     
-<li>Philippe Maisonneuve, M.A.Sc. (génie énergétique) </li> 
-<li>Jean-Luc Lupien, M.A.Sc. </li>      
-<li>Jean-William Lauzon, M.A.Sc. (co-supervisé avec Prof. Ilhan Kocar) </li>   
-<li>Anne-Marie Sauvageau, M.Ing. (génie énergétique) </li>
-<li>Ulrich Ephraim Yepmou Kepnang, M.Ing. (génie énergétique) </li>
-<li>Laurella Dionisi, M.Ing. (génie énergétique) </li>
-<li>Inès Conde, M.Ing. (génie énergétique) </li>
-<li>Félix Pellerin, B.Ing.-stagiaire </li>  
-  
+<li>Feng Li, Ph.D. (co-supervisé avec Prof. Ilhan Kocar), 2021 - </li>
+<li>Fatemeh Rajabi, Ph.D. (Mathématiques appliquées, co-supervisée avec Prof. Antoine Legrain), 2022 - </li>  
+<li>Marie-Christine Paré, M.A.Sc. (génie énergétique), 2021 - </li>     
+<li>Philippe Maisonneuve, M.A.Sc. (génie énergétique), 2022 - </li> 
+<li>Jean-Luc Lupien, M.A.Sc., 2022 - </li>      
+<li>Jean-William Lauzon, M.A.Sc. (co-supervisé avec Prof. Ilhan Kocar), 2022 - </li> 
+<li>Loreley Sepho, M.A.Sc. (génie énergétique, co-supervisée avec Prof. Hanane Dagdougui), 2022 - </li> 
+<li>Anne-Marie Sauvageau, M.Ing. (génie énergétique), 2021, - </li>
+<li>Ulrich Ephraim Yepmou Kepnang, M.Ing. (génie énergétique), 2022 - </li>
+<li>Laurella Dionisi, M.Ing. (génie énergétique), 2022 - </li>
+<li>Inès Conde, M.Ing. (génie énergétique), 2022 -  </li>
+<li>Julien Pallage, B.Ing.-stagiaire, été 2022 </li>  
+<li>Olivier Daoust, B.Ing.-stagiaire, été 2022 (co-supervisé avec Prof. Gunes Karabulut Kurt)</li>  
   
 </ul>  
 
 
+<h3>Alumni</h3>
+
+<ul style="list-style-type:disc;">
+ 
+<li>Félix Pellerin, B.Ing.-stagiaire, été 2021 </li>    
+  
+</ul>  
