--- a/_pages/group.html
+++ b/_pages/group.html
@@ -13,12 +13,12 @@ author_profile: true
 
 
 <li>Feng Li, Ph.D. (co-supervisé avec Prof. Ilhan Kocar), 2021 - </li>
-<li>Fatemeh Rajabi, Ph.D. (Mathématiques appliquées, co-supervisée avec Prof. Antoine Legrain), 2022 - </li>  
+<li>Fatemeh Rajabi, Ph.D. (mathématiques appliquées, co-supervisée avec Prof. Antoine Legrain), 2022 - </li>  
 <li>Marie-Christine Paré, M.A.Sc. (génie énergétique), 2021 - </li>     
 <li>Philippe Maisonneuve, M.A.Sc. (génie énergétique), 2022 - </li> 
 <li>Jean-Luc Lupien, M.A.Sc., 2022 - </li>      
 <li>Jean-William Lauzon, M.A.Sc. (co-supervisé avec Prof. Ilhan Kocar), 2022 - </li> 
-<li>Loreley Sepho, M.A.Sc. (génie énergétique, co-supervisée avec Prof. Hanane Dagdougui), 2022 - </li> 
+<li>Loreley Sepho, M.A.Sc. (mathématiques appliquées, co-supervisée avec Prof. Hanane Dagdougui), 2022 - </li> 
 <li>Anne-Marie Sauvageau, M.Ing. (génie énergétique), 2021, - </li>
 <li>Ulrich Ephraim Yepmou Kepnang, M.Ing. (génie énergétique), 2022 - </li>
 <li>Laurella Dionisi, M.Ing. (génie énergétique), 2022 - </li>
