--- a/_pages/group.html
+++ b/_pages/group.html
@@ -20,11 +20,13 @@ author_profile: true
 <li>Jean-William Lauzon, M.A.Sc. (co-supervisé avec Prof. Ilhan Kocar), 2022 - </li> 
 <li>Loreley Sepho, M.A.Sc. (mathématiques appliquées, co-supervisée avec Prof. Hanane Dagdougui), 2022 - </li> 
 <li>Anne-Marie Sauvageau, M.Ing. (génie énergétique), 2021, - </li>
+<li>Matthias Molenat, M.A.Sc. (co-supervisé avec Prof. Jean Mahseredjian), 2022 - </li> 
 <li>Ulrich Ephraim Yepmou Kepnang, M.Ing. (génie énergétique), 2022 - </li>
 <li>Laurella Dionisi, M.Ing. (génie énergétique), 2022 - </li>
 <li>Inès Conde, M.Ing. (génie énergétique), 2022 -  </li>
-<li>Julien Pallage, B.Ing.-stagiaire, été 2022 </li>  
-<li>Olivier Daoust, B.Ing.-stagiaire, été 2022 (co-supervisé avec Prof. Gunes Karabulut Kurt)</li>  
+<li>Élodie Campeau, M.Ing. (génie énergétique), 2022 -  </li>
+<li>Julien Pallage, B.Ing.-stagiaire, 2022 - </li>  
+<li>Olivier Daoust, B.Ing.-stagiaire (co-supervisé avec Prof. Gunes Karabulut Kurt), 2022 - </li>  
   
 </ul>  
 
