--- a/_pages/group.html
+++ b/_pages/group.html
@@ -9,11 +9,20 @@ author_profile: true
 
 <h3>Membres du groupe</h3>
 
+<h4>Ph.D.</h4>
+
 <ul style="list-style-type:disc;">
 
 
 <li>Feng Li, Ph.D. (co-supervisé avec Prof. Ilhan Kocar), 2021 - </li>
 <li>Fatemeh Rajabi, Ph.D. (mathématiques appliquées, co-supervisée avec Prof. Antoine Legrain), 2022 - </li>  
+
+</ul>  
+
+<h4>M.A.Sc.</h4>
+
+<ul style="list-style-type:disc;">
+
 <li>Marie-Christine Paré, M.A.Sc. (génie énergétique), 2021 - </li>     
 <li>Philippe Maisonneuve, M.A.Sc. (génie énergétique), 2022 - </li> 
 <li>Jean-Luc Lupien, M.A.Sc., 2022 - </li>      
@@ -30,11 +39,33 @@ author_profile: true
   
 </ul>  
 
+<h4>M.Ing.</h4>
+
+<ul style="list-style-type:disc;">
+
+<li>Anne-Marie Sauvageau, M.Ing. (génie énergétique), 2021, - </li>
+<li>Matthias Molenat, M.A.Sc. (co-supervisé avec Prof. Jean Mahseredjian), 2022 - </li> 
+<li>Ulrich Ephraim Yepmou Kepnang, M.Ing. (génie énergétique), 2022 - </li>
+<li>Laurella Dionisi, M.Ing. (génie énergétique), 2022 - </li>
+<li>Inès Conde, M.Ing. (génie énergétique), 2022 -  </li>
+<li>Élodie Campeau, M.Ing. (génie énergétique), 2022 -  </li>
+  
+</ul>  
+
+<h4>Stagiaires</h4>
+
+<ul style="list-style-type:disc;">
+
+<li>Julien Pallage, B.Ing.-stagiaire, 2022 - </li>  
+<li>Olivier Daoust, B.Ing.-stagiaire (co-supervisé avec Prof. Gunes Karabulut Kurt), 2022 - </li>  
+  
+</ul> 
+
 
 <h3>Alumni</h3>
 
 <ul style="list-style-type:disc;">
  
-<li>Félix Pellerin, B.Ing.-stagiaire, été 2021 </li>    
-  
+<li>Félix Pellerin, B.Ing.-stagiaire, été 2021, maintenant M.Sc. à l'Université de Montréal</li>    
+<li>Inès Conde, M.Ing. (génie énergétique), 2022 -  2022</li>  
 </ul>  
