--- a/_pages/group.html
+++ b/_pages/group.html
@@ -15,7 +15,7 @@ author_profile: true
 
 
 <li>Feng Li, Ph.D. (co-supervisé avec Prof. Ilhan Kocar), 2021 - </li>
-<li>Fatemeh Rajabi, Ph.D. (mathématiques appliquées, co-supervisée avec Prof. Antoine Legrain), 2022 - </li>  
+<li>Fatemeh Rajabi, Ph.D. (mathématiques, co-supervisée avec Prof. Antoine Legrain), 2022 - </li>  
 
 </ul>  
 
