--- a/_pages/group.html
+++ b/_pages/group.html
@@ -14,8 +14,9 @@ author_profile: true
 <ul style="list-style-type:disc;">
 
 
-<li>Feng Li, Ph.D. (co-supervisé avec Prof. Ilhan Kocar), 2021 - </li>
-<li>Fatemeh Rajabi, Ph.D. (mathématiques, co-supervisée avec Prof. Antoine Legrain), 2022 - </li>  
+<li>Feng Li (co-supervisé avec Prof. Ilhan Kocar), 2021 - </li>
+<li>Fatemeh Rajabi (mathématiques, co-supervisée avec Prof. Antoine Legrain), 2022 - </li> 
+<li>Kouamé N'Zi (co-supervisé avec Prof. Jean Mahseredjian), 2023 - </li>
 
 </ul>  
 
@@ -23,25 +24,37 @@ author_profile: true
 
 <ul style="list-style-type:disc;">
 
-<li>Marie-Christine Paré, M.A.Sc. (génie énergétique), 2021 - </li>     
-<li>Philippe Maisonneuve, M.A.Sc. (génie énergétique), 2022 - </li> 
-<li>Jean-Luc Lupien, M.A.Sc., 2022 - </li>      
-<li>Jean-William Lauzon, M.A.Sc. (co-supervisé avec Prof. Ilhan Kocar), 2022 - </li> 
-<li>Loreley Sepho, M.A.Sc. (mathématiques appliquées, co-supervisée avec Prof. Hanane Dagdougui), 2022 - </li> 
-<li>Matthias Molenat, M.A.Sc. (co-supervisé avec Prof. Jean Mahseredjian), 2022 - </li> 
+<li>Marie-Christine Paré (génie énergétique), 2021 - </li>     
+<li>Philippe Maisonneuve (génie énergétique), 2022 - </li> 
+<li>Jean-Luc Lupien, 2022 - </li>      
+<li>Jean-William Lauzon (co-supervisé avec Prof. Ilhan Kocar), 2022 - </li> 
+<li>Loreley Sepho (mathématiques appliquées, co-supervisée avec Prof. Hanane Dagdougui), 2022 - </li> 
+<li>Matthias Molenat (co-supervisé avec Prof. Jean Mahseredjian), 2022 - </li>
+<li>Olivier Bélanger (co-supervisé avec Prof. Gunes Karabulut Kurt), 2023 - </li>  
+<li>Bouh Abdillahi (co-supervisé avec Prof. Gunes Karabulut Kurt), 2023 - </li>  
   
+</ul>  
+
+<h4>Chercheur postdoctoral.</h4>
+
+<ul style="list-style-type:disc;">
+
+
+<li>Christian Bingane (mathématiques, co-supervisé avec Prof. Hanane Dagdougui), 2022 - </li>
+
 </ul>  
 
 <h4>M.Ing.</h4>
 
 <ul style="list-style-type:disc;">
 
-<li>Anne-Marie Sauvageau, M.Ing. (génie énergétique), 2021, - </li>
-<li>Matthias Molenat, M.A.Sc. (co-supervisé avec Prof. Jean Mahseredjian), 2022 - </li> 
-<li>Ulrich Ephraim Yepmou Kepnang, M.Ing. (génie énergétique), 2022 - </li>
-<li>Laurella Dionisi, M.Ing. (génie énergétique), 2022 - </li>
-<li>Élodie Campeau, M.Ing. (génie énergétique), 2022 -  </li>
-  
+<li>Anne-Marie Sauvageau (génie énergétique), 2021, - </li>
+<li>Matthias Molenat (co-supervisé avec Prof. Jean Mahseredjian), 2022 - </li> 
+<li>Ulrich Ephraim Yepmou Kepnang (génie énergétique), 2022 - </li>
+<li>Laurella Dionisi (génie énergétique), 2022 - </li>
+<li>Élodie Campeau (génie énergétique), 2022 -  </li>
+<li>Louis-Philippe Parent (génie énergétique), 2023 -  </li>  
+<li>Christian Ngansop, 2023 -  </li>  
 </ul>  
 
 <h4>Stagiaires</h4>
