--- a/_pages/group.html
+++ b/_pages/group.html
@@ -41,8 +41,8 @@ author_profile: true
 
 
 <li>Christian Bingane (mathématiques, co-supervisé avec Prof. Hanane Dagdougui), 2022 - </li>
-<li> Olfa Ben Yahia (co-supervisé avec Prof. Gunes Karabulut Kurt), 2023 - </li>
-<li> Zineb Garroussi (co-supervisé avec Prof. Brunilde Sanso, Prof. Gunes Karabulut Kurt et Prof. Jean-François Frigon), 2023 - </li>
+<li> Olfa Ben Yahia (co-supervisée avec Prof. Gunes Karabulut Kurt), 2023 - </li>
+<li> Zineb Garroussi (co-supervisée avec Prof. Brunilde Sanso, Prof. Gunes Karabulut Kurt et Prof. Jean-François Frigon), 2023 - </li>
   
 </ul>  
 
