--- a/_pages/group.html
+++ b/_pages/group.html
@@ -32,10 +32,12 @@ author_profile: true
 <li>Matthias Molenat (co-supervisé avec Prof. Jean Mahseredjian), 2022 - </li>
 <li>Olivier Bélanger (co-supervisé avec Prof. Gunes Karabulut Kurt), 2023 - </li>  
 <li>Bouh Abdillahi (co-supervisé avec Prof. Gunes Karabulut Kurt), 2023 - </li>  
-  
+<li>Christina G. Soldati (co-supervisé avec Prof. Sébastien Le Digabel), 2023 - </li>  
+<li>Samuel Mendoza (co-supervisé avec Prof. Sébastien Le Digabel), 2023 - </li> 
+<li>Étienne Tremblay, 2023 - </li>   
 </ul>  
 
-<h4>Chercheur postdoctoral.</h4>
+<h4>Chercheur(e)s postdoctoral(e)s.</h4>
 
 <ul style="list-style-type:disc;">
 
@@ -64,7 +66,8 @@ author_profile: true
 <ul style="list-style-type:disc;">
 
 <li>Julien Pallage, B.Ing.-stagiaire, 2022 - </li>  
-<li>Olivier Daoust, B.Ing.-stagiaire (co-supervisé avec Prof. Gunes Karabulut Kurt), 2022 - </li>  
+<li>Victor Darleguy, B.Ing.-stagiaire, 2023 - </li>  
+<li>Adam Osmani, B.Ing.-stagiaire (co-supervisé avec Prof. Gunes Karabulut Kurt), 2023 - </li>  
   
 </ul> 
 
@@ -73,6 +76,7 @@ author_profile: true
 
 <ul style="list-style-type:disc;">
  
-<li>Félix Pellerin, B.Ing.-stagiaire, été 2021, maintenant M.Sc. à l'Université de Montréal</li>    
-<li>Inès Conde, M.Ing. (génie énergétique), 2022 -  2022</li>  
+<li>Félix Pellerin, B.Ing.-stagiaire, été 2021, maintenant M.Sc. à l'Université de Montréal.</li>    
+<li>Inès Conde, M.Ing. (génie énergétique), 2022 -  2022.</li>  
+<li>Olivier Daoust, B.Ing.-stagiaire (co-supervisé avec Prof. Gunes Karabulut Kurt), 2022 - 2023.</li>  
 </ul>  
