--- a/_pages/group.html
+++ b/_pages/group.html
@@ -32,7 +32,7 @@ author_profile: true
 <li>Matthias Molenat (co-supervisé avec Prof. Jean Mahseredjian), 2022 - </li>
 <li>Olivier Bélanger (co-supervisé avec Prof. Gunes Karabulut Kurt), 2023 - </li>  
 <li>Bouh Abdillahi (co-supervisé avec Prof. Gunes Karabulut Kurt), 2023 - </li>  
-<li>Christina G. Soldati (co-supervisé avec Prof. Sébastien Le Digabel), 2023 - </li>  
+<li>Christina G. Soldati (co-supervisée avec Prof. Sébastien Le Digabel), 2023 - </li>  
 <li>Samuel Mendoza (co-supervisé avec Prof. Sébastien Le Digabel), 2023 - </li> 
 <li>Étienne Tremblay, 2023 - </li>   
 </ul>  
@@ -53,7 +53,6 @@ author_profile: true
 <ul style="list-style-type:disc;">
 
 <li>Anne-Marie Sauvageau (génie énergétique), 2021, - </li>
-<li>Matthias Molenat (co-supervisé avec Prof. Jean Mahseredjian), 2022 - </li> 
 <li>Ulrich Ephraim Yepmou Kepnang (génie énergétique), 2022 - </li>
 <li>Laurella Dionisi (génie énergétique), 2022 - </li>
 <li>Élodie Campeau (génie énergétique), 2022 -  </li>
