--- a/_pages/group.html
+++ b/_pages/group.html
@@ -66,8 +66,10 @@ author_profile: true
 
 <li>Julien Pallage, B.Ing.-stagiaire, 2022 - </li>  
 <li>Victor Darleguy, B.Ing.-stagiaire, 2023 - </li>  
-<li>Adam Osmani, B.Ing.-stagiaire (co-supervisé avec Prof. Gunes Karabulut Kurt), 2023 - </li>  
-  
+<li>Adam Osmani, B.Ing.-stagiaire (co-supervisé avec Prof. Gunes Karabulut Kurt), été 2023 </li>  
+<li>Alexis Caraud, M2 (ENAC)-stagiaire (co-supervisé avec Prof. Sébastien Le Digabel), été 2023 </li>    
+<li>Stéphane Salim, M2 (ENAC)-stagiaire (co-supervisé avec Prof. Sébastien Le Digabel), été 2023 </li>    
+<li>Yu-Hsin Wu, Ph.D. (Nagoya University)-stagiaire, été 2023 </li>    
 </ul> 
 
 
@@ -76,6 +78,6 @@ author_profile: true
 <ul style="list-style-type:disc;">
  
 <li>Félix Pellerin, B.Ing.-stagiaire, été 2021, maintenant M.Sc. à l'Université de Montréal.</li>    
-<li>Inès Conde, M.Ing. (génie énergétique), 2022 -  2022.</li>  
+<li>Inès Conde, M.Ing. (génie énergétique), 2022 -  2022, maintenant à MÉTIGA</li>  
 <li>Olivier Daoust, B.Ing.-stagiaire (co-supervisé avec Prof. Gunes Karabulut Kurt), 2022 - 2023.</li>  
 </ul>  
