--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -8,7 +8,9 @@ author_profile: true
 
 <h2> Département de génie électrique, Polytechnique Montréal</h2>
 <ul>
-  <li>ELE2700: <i>Analyse des signaux</i>,  Automne 2021; </li>
-  <li>ELE6953H: <i>Méthodes d'optimisation & d'apprentissage pour les réseaux électriques</i>, Hiver 2022. </li>
-  <li>ELE8456: <i>Réseaux de distribution</i> (coordonnateur seulement), Hiver 2022. </li>
+  <li>ELE2700: <i>Analyse des signaux</i>,  automne 2021, 2022; </li>
+  <li>ELE8453: <i>Méthodes d'optimisation & d'apprentissage pour les réseaux électriques</i>, hiver 2022, 2023; </li>
+  <li>ELE8456: <i>Réseaux de distribution</i> (coordonnateur), hiver 2022, 2023; </li>
+  <li>ELE8452: <i>Réseaux électriques</i> (coordonnateur), automne 2022; </li>
+  <li>ELE8459: <i>Protection des réseaux électriques</i> (coordonnateur), hiver 2023. </li>
 </ul>
