--- a/_pages/group.html
+++ b/_pages/group.html
@@ -17,6 +17,7 @@ author_profile: true
 <li>Feng Li (co-supervisé avec Prof. Ilhan Kocar), 2021 - </li>
 <li>Fatemeh Rajabi (mathématiques, co-supervisée avec Prof. Antoine Legrain), 2022 - </li> 
 <li>Kouamé N'Zi (co-supervisé avec Prof. Jean Mahseredjian), 2023 - </li>
+<li>Théo Laurentin (co-supervisé avec Prof. Jérôme Le Ny), 2023 - </li>
 
 </ul>  
 
@@ -25,8 +26,6 @@ author_profile: true
 <ul style="list-style-type:disc;">
 
 <li>Marie-Christine Paré (génie énergétique), 2021 - </li>     
-<li>Philippe Maisonneuve (génie énergétique), 2022 - </li> 
-<li>Jean-Luc Lupien, 2022 - </li>      
 <li>Jean-William Lauzon (co-supervisé avec Prof. Ilhan Kocar), 2022 - </li> 
 <li>Loreley Sepho (mathématiques appliquées, co-supervisée avec Prof. Hanane Dagdougui), 2022 - </li> 
 <li>Matthias Molenat (co-supervisé avec Prof. Jean Mahseredjian), 2022 - </li>
@@ -34,15 +33,16 @@ author_profile: true
 <li>Bouh Abdillahi (co-supervisé avec Prof. Gunes Karabulut Kurt), 2023 - </li>  
 <li>Christina G. Soldati (co-supervisée avec Prof. Sébastien Le Digabel), 2023 - </li>  
 <li>Samuel Mendoza (co-supervisé avec Prof. Sébastien Le Digabel), 2023 - </li> 
-<li>Étienne Tremblay, 2023 - </li>   
+<li>Étienne Tremblay, 2023 - </li>  
+<li>Julien Pallage, 2023 - </li>     
+<li>Victor Darleguy (Energy Engineering), 2023 - </li>     
+<li>Julie Durette (co-supervisée avec Prof. Gunes Karabulut Kurt), 2023 - </li> 
 </ul>  
 
-<h4>Chercheur(e)s postdoctoral(e)s.</h4>
+<h4>Chercheur.e.s postdoctoral.e.s.</h4>
 
 <ul style="list-style-type:disc;">
 
-
-<li>Christian Bingane (mathématiques, co-supervisé avec Prof. Hanane Dagdougui), 2022 - </li>
 <li> Olfa Ben Yahia (co-supervisée avec Prof. Gunes Karabulut Kurt), 2023 - </li>
 <li> Zineb Garroussi (co-supervisée avec Prof. Brunilde Sanso, Prof. Gunes Karabulut Kurt et Prof. Jean-François Frigon), 2023 - </li>
   
@@ -54,30 +54,49 @@ author_profile: true
 
 <li>Anne-Marie Sauvageau (génie énergétique), 2021, - </li>
 <li>Ulrich Ephraim Yepmou Kepnang (génie énergétique), 2022 - </li>
-<li>Laurella Dionisi (génie énergétique), 2022 - </li>
 <li>Élodie Campeau (génie énergétique), 2022 -  </li>
-<li>Louis-Philippe Parent (génie énergétique), 2023 -  </li>  
-<li>Christian Ngansop, 2023 -  </li>  
+<!-- <li>Louis-Philippe Parent (génie énergétique), 2023 -  </li>  
+<li>Christian Ngansop, 2023 -  </li>  -->
+<li> Laurence Leblanc (génie énergétique), 2023 - </li> 
 </ul>  
 
-<h4>Stagiaires</h4>
+<h4>Stagiaires et visiteur.e.s</h4>
 
 <ul style="list-style-type:disc;">
 
-<li>Julien Pallage, B.Ing.-stagiaire, 2022 - </li>  
-<li>Victor Darleguy, B.Ing.-stagiaire, 2023 - </li>  
 <li>Adam Osmani, B.Ing.-stagiaire (co-supervisé avec Prof. Gunes Karabulut Kurt), été 2023 </li>  
-<li>Alexis Caraud, M2 (ENAC)-stagiaire (co-supervisé avec Prof. Sébastien Le Digabel), été 2023 </li>    
-<li>Stéphane Salim, M2 (ENAC)-stagiaire (co-supervisé avec Prof. Sébastien Le Digabel), été 2023 </li>    
-<li>Yu-Hsin Wu, Ph.D. (Nagoya University)-stagiaire, été 2023 </li>    
+<li>Alexis Caraud, visiteur M2 (ENAC) (co-supervisé avec Prof. Sébastien Le Digabel), été 2023 </li>    
+<li>Stéphane Salim, visiteur M2 (ENAC) (co-supervisé avec Prof. Sébastien Le Digabel), été 2023 </li>    
 </ul> 
 
+<hr size="10px" />
 
-<h3>Alumni</h3>
+<h2>Alumni</h2>
+
+<h4>M.A.Sc.</h4>
 
 <ul style="list-style-type:disc;">
- 
-<li>Félix Pellerin, B.Ing.-stagiaire, été 2021, maintenant M.Sc. à l'Université de Montréal.</li>    
-<li>Inès Conde, M.Ing. (génie énergétique), 2022 -  2022, maintenant à MÉTIGA</li>  
-<li>Olivier Daoust, B.Ing.-stagiaire (co-supervisé avec Prof. Gunes Karabulut Kurt), 2022 - 2023.</li>  
+    <li>Jean-Luc Lupien, M.A.Sc. 2022 - 2023, maintenenant étudiant MSc à l'Université de Californie, Berkeley.</li>   
+    <li>Philippe Maisonneuve, M.A.Sc. (génie énergétique), 2022 - 2023, maintenant étudiant PhD à l'Université Technique du Danemark (DTU). </li> 
+    </ul>  
+
+<h4>Chercheur.e.s postdoctoral.e.s</h4>
+
+<ul style="list-style-type:disc;">
+    <li>Christian Bingane (mathématiques, co-supervisé avec Prof. Hanane Dagdougui), 2022 - 2023, maintenant professeur agrégé à l'Université de Kinshasa.</li> 
+    </ul>  
+
+<h4>M.Ing.</h4>
+<ul style="list-style-type:disc;">
+    <li>Inès Conde, M.Ing. (génie énergétique), 2022-2022, maintenant à MÉTIGA.</li>
+    <li>Laurella Dionisi, M.Ing. (génie énergétique), 2022 - 2023, maitnenant à EDF.</li>
+    </ul>  
+
+<h4>Stagiaires et visiteur.e.s</h4>
+
+<ul style="list-style-type:disc;">
+
+<li>Félix Pellerin, B.Ing.-stagiaire, été 2021, maintenant étudiant PhD à l'Université de Montréal.</li>
+<li>Olivier Daoust, B.Ing.-stagiaire (co-supervisé avec Prof. Gunes Karabulut Kurt), été 2022, 2022 - 2023.</li>
+<li>Yu-Hsin Wu, visiteur Ph.D. (Nagoya University), été 2023. </li>    
 </ul>  
