groupe et recrutement

--- a/_pages/group.html
+++ b/_pages/group.html
@@ -18,15 +18,13 @@ author_profile: true
 <li>Fatemeh Rajabi (mathématiques, co-supervisée avec Prof. Antoine Legrain), 2022 - </li> 
 <li>Kouamé N'Zi (co-supervisé avec Prof. Jean Mahseredjian), 2023 - </li>
 <li>Théo Laurentin (co-supervisé avec Prof. Jérôme Le Ny), 2023 - </li>
+<li>Ulrich Ephraim Yepmou Kepnang (co-supervisé avec Prof. Jean Mahseredjian), 2024 - </li>
 
 </ul>  
 
 <h4>M.A.Sc.</h4>
 
 <ul style="list-style-type:disc;">
-
-<li>Marie-Christine Paré (génie énergétique), 2021 - </li>     
-<li>Jean-William Lauzon (co-supervisé avec Prof. Ilhan Kocar), 2022 - </li> 
 <li>Loreley Sepho (mathématiques appliquées, co-supervisée avec Prof. Hanane Dagdougui), 2022 - </li> 
 <li>Matthias Molenat (co-supervisé avec Prof. Jean Mahseredjian), 2022 - </li>
 <li>Olivier Bélanger (co-supervisé avec Prof. Gunes Karabulut Kurt), 2023 - </li>  
@@ -35,8 +33,10 @@ author_profile: true
 <li>Samuel Mendoza (co-supervisé avec Prof. Sébastien Le Digabel), 2023 - </li> 
 <li>Étienne Tremblay, 2023 - </li>  
 <li>Julien Pallage, 2023 - </li>     
-<li>Victor Darleguy (Energy Engineering), 2023 - </li>     
+<li>Victor Darleguy (génie énergétique), 2023 - </li>     
 <li>Julie Durette (co-supervisée avec Prof. Gunes Karabulut Kurt), 2023 - </li> 
+<li>Mohamad Charara (mathématiques appliquées, co-supervisé avec Prof. Hanane Dagdougui), 2023 - </li> 
+<li>Xavier Audet (génie énergétique), 2024 - </li>     
 </ul>  
 
 <h4>Chercheur.e.s postdoctoral.e.s.</h4>
@@ -53,11 +53,11 @@ author_profile: true
 <ul style="list-style-type:disc;">
 
 <li>Anne-Marie Sauvageau (génie énergétique), 2021, - </li>
-<li>Ulrich Ephraim Yepmou Kepnang (génie énergétique), 2022 - </li>
 <li>Élodie Campeau (génie énergétique), 2022 -  </li>
-<!-- <li>Louis-Philippe Parent (génie énergétique), 2023 -  </li>  
-<li>Christian Ngansop, 2023 -  </li>  -->
+<li>Louis-Philippe Parent (génie énergétique), 2023 -  </li>  
+<!--<li>Christian Ngansop, 2023 -  </li>  -->
 <li> Laurence Leblanc (génie énergétique), 2023 - </li> 
+<li> Baptiste Salvi (génie énergétique), 2024 - </li> 
 </ul>  
 
 <h4>Stagiaires et visiteur.e.s</h4>
@@ -65,8 +65,6 @@ author_profile: true
 <ul style="list-style-type:disc;">
 
 <li>Adam Osmani, B.Ing.-stagiaire (co-supervisé avec Prof. Gunes Karabulut Kurt), été 2023 </li>  
-<li>Alexis Caraud, visiteur M2 (ENAC) (co-supervisé avec Prof. Sébastien Le Digabel), été 2023 </li>    
-<li>Stéphane Salim, visiteur M2 (ENAC) (co-supervisé avec Prof. Sébastien Le Digabel), été 2023 </li>    
 </ul> 
 
 <hr size="10px" />
@@ -78,7 +76,9 @@ author_profile: true
 <ul style="list-style-type:disc;">
     <li>Jean-Luc Lupien, M.A.Sc. 2022 - 2023, maintenenant étudiant MSc à l'Université de Californie, Berkeley.</li>   
     <li>Philippe Maisonneuve, M.A.Sc. (génie énergétique), 2022 - 2023, maintenant étudiant PhD à l'Université Technique du Danemark (DTU). </li> 
-    </ul>  
+    <li>Jean-William Lauzon (co-supervisé avec Prof. Ilhan Kocar), 2022 - 2023, maintenant CPI en réseaux de puissance à Eaton.</li>     
+    <li>Marie-Christine Paré (génie énergétique), 2021 - 2023.</li>     
+</ul>  
 
 <h4>Chercheur.e.s postdoctoral.e.s</h4>
 
@@ -90,6 +90,7 @@ author_profile: true
 <ul style="list-style-type:disc;">
     <li>Inès Conde, M.Ing. (génie énergétique), 2022-2022, maintenant à MÉTIGA.</li>
     <li>Laurella Dionisi, M.Ing. (génie énergétique), 2022 - 2023, maitnenant à EDF.</li>
+    <li>Ulrich Ephraim Yepmou Kepnang (génie énergétique), 2022 - 2023, maintenant étudiant PhD à Polytechnique Montréal</li>
     </ul>  
 
 <h4>Stagiaires et visiteur.e.s</h4>
@@ -98,5 +99,7 @@ author_profile: true
 
 <li>Félix Pellerin, B.Ing.-stagiaire, été 2021, maintenant étudiant PhD à l'Université de Montréal.</li>
 <li>Olivier Daoust, B.Ing.-stagiaire (co-supervisé avec Prof. Gunes Karabulut Kurt), été 2022, 2022 - 2023.</li>
-<li>Yu-Hsin Wu, visiteur Ph.D. (Nagoya University), été 2023. </li>    
+<li>Yu-Hsin Wu, visiteur Ph.D. (Nagoya University), été 2023. </li>
+<li>Alexis Caraud, visiteur M2 (ENAC) (co-supervisé avec Prof. Sébastien Le Digabel), été 2023, maintenant étudiant PhD à Polytechnique Montréal. </li>    
+<li>Stéphane Salim, visiteur M2 (ENAC) (co-supervisé avec Prof. Sébastien Le Digabel), été 2023, maintenant à Paris Aéroport. </li>        
 </ul>  
