--- a/_pages/group.html
+++ b/_pages/group.html
@@ -52,8 +52,6 @@ author_profile: true
 
 <ul style="list-style-type:disc;">
 
-<li>Anne-Marie Sauvageau (génie énergétique), 2021, - </li>
-<li>Élodie Campeau (génie énergétique), 2022 -  </li>
 <li>Louis-Philippe Parent (génie énergétique), 2023 -  </li>  
 <!--<li>Christian Ngansop, 2023 -  </li>  -->
 <li> Laurence Leblanc (génie énergétique), 2023 - </li> 
@@ -75,9 +73,9 @@ author_profile: true
 
 <ul style="list-style-type:disc;">
     <li>Jean-Luc Lupien, M.A.Sc. 2022 - 2023, maintenenant étudiant MSc à l'Université de Californie, Berkeley.</li>   
-    <li>Philippe Maisonneuve, M.A.Sc. (génie énergétique), 2022 - 2023, maintenant étudiant PhD à l'Université Technique du Danemark (DTU). </li> 
+    <li>Philippe Maisonneuve, M.A.Sc. (génie énergétique), 2022 - 2023, maintenant Fireraven. </li> 
     <li>Jean-William Lauzon (co-supervisé avec Prof. Ilhan Kocar), 2022 - 2023, maintenant CPI en réseaux de puissance à Eaton.</li>     
-    <li>Marie-Christine Paré (génie énergétique), 2021 - 2023.</li>     
+    <li>Marie-Christine Paré (génie énergétique), 2021 - 2023, maintenant à la Régie de l'Énergie du Québec.</li>     
 </ul>  
 
 <h4>Chercheur.e.s postdoctoral.e.s</h4>
@@ -91,7 +89,9 @@ author_profile: true
     <li>Inès Conde, M.Ing. (génie énergétique), 2022-2022, maintenant à MÉTIGA.</li>
     <li>Laurella Dionisi, M.Ing. (génie énergétique), 2022 - 2023, maitnenant à EDF.</li>
     <li>Ulrich Ephraim Yepmou Kepnang (génie énergétique), 2022 - 2023, maintenant étudiant PhD à Polytechnique Montréal</li>
-    </ul>  
+    <li>Anne-Marie Sauvageau (génie énergétique), 2021 - 2023, maintenant à la Régie de l'Énergie du Québec.</li>     
+    <li>Élodie Campeau (génie énergétique), 2022 -  2023 maintenant à NRCAN CanmetÉNERGIE</li>    
+</ul>  
 
 <h4>Stagiaires et visiteur.e.s</h4>
 
