--- a/_pages/group.html
+++ b/_pages/group.html
@@ -71,7 +71,7 @@ author_profile: true
 
 <ul style="list-style-type:disc;">
 
-<li>Tudor-Mihai Buhut, B.Ing.-stagiare (co-supervisé with Prof. Sébastien Le Digabel), été 2024.</li>
+<li>Tudor-Mihai Buhut, B.Ing.-stagiare (co-supervisé with Prof. Sébastien Le Digabel), été 2024, 2024 -</li>
 <li>Joséphine Gobert, visiteure M2 (ENAC) (co-supervisée with Prof. Sébastien Le Digabel), été 2024.</li>
 </ul> 
 
