--- a/_pages/group.html
+++ b/_pages/group.html
@@ -14,13 +14,13 @@ author_profile: true
 <ul style="list-style-type:disc;">
 
 
-<li>Feng Li (co-supervisé avec Prof. Ilhan Kocar), 2021 - </li>
 <li>Kouamé N'Zi (co-supervisé avec Prof. Jean Mahseredjian), 2023 - </li>
 <li>Théo Laurentin (co-supervisé avec Prof. Jérôme Le Ny), 2023 - </li>
 <li>Ulrich Ephraim Yepmou Kepnang (co-supervisé avec Prof. Jean Mahseredjian), 2024 - </li>
 <li>Prosper Anihannou (Mathématiques, co-supervisé avec Prof. Hanane Dagdougui), 2024 - </li> 
 <li>Marc-Antoine Coulombe (à l'Université du Québec à Rimouski, co-supervisé avec Prof. Maxime Berger), 2024 - </li> 
 <li>Yi Chen (co-supervisé avec Prof. Gunes Karabulut Kurt), 2024 - </li> 
+<li>Chao Yin, 2024 - </li> 
 
 </ul>  
 
@@ -28,7 +28,6 @@ author_profile: true
 
 <ul style="list-style-type:disc;">
 <li>Loreley Sepho (mathématiques appliquées, co-supervisée avec Prof. Hanane Dagdougui), 2022 - </li> 
-<li>Matthias Molenat (co-supervisé avec Prof. Jean Mahseredjian), 2022 - </li>
 <li>Bouh Abdillahi (co-supervisé avec Prof. Gunes Karabulut Kurt), 2023 - </li>  
 <li>Christina G. Soldati (co-supervisée avec Prof. Sébastien Le Digabel), 2023 - </li>  
 <li>Samuel Mendoza (co-supervisé avec Prof. Sébastien Le Digabel), 2023 - </li> 
@@ -42,18 +41,18 @@ author_profile: true
 <li>Jérôme Lafontaine (co-supervisé avec Prof. Maxime Berger), 2024 - </li> 
 <li>Louis-Philippe Baillargeon (co-supervisé avec Prof. Maxime Berger), 2024 - </li> 
 <li>William Zhang, 2024 - </li> 
-<li>Julien Courcoul (co-supervisé avec Prof. Jean Mahseredjian), 2024 - </li>      
+<li>Julien Courcoul (co-supervisé avec Prof. Jean Mahseredjian), 2024 - </li>   
+<li>Yassine Afif (co-supervisé avec Prof. Gunes Karabulut Kurt), 2024 - </li>   
 </ul>  
 
 <h4>Chercheur.e.s postdoctoral.e.s.</h4>
 
 <ul style="list-style-type:disc;">
 
-    <li> Noureddine Toumi (co-supervisé with Prof. Jean Mahseredjian), 2024 - </li>
-    <li> Ludovic Salomon (Mathématiques, co-supervisé with Prof. Sébastien Le Digabel), 2024 - </li>
-    <li> Samuel Muhindo (Mathematiques, co-supervisé with Prof. Hanane Dagdougui), 2024 - </li>
     <li> Olfa Ben Yahia (co-supervisée with Prof. Brunilde Sanso et Prof. Jean-François Frigon), 2023 - </li>
-    <li> Zineb Garroussi (co-supervisée with Prof. Brunilde Sanso, Prof. Gunes Karabulut Kurt, et Prof. Jean-François Frigon), 2023 - </li>  
+    <li> Ludovic Salomon (Mathématiques, co-supervisé with Prof. Sébastien Le Digabel), 2024 - </li>
+    <li> Noureddine Toumi (co-supervisé with Prof. Jean Mahseredjian), 2024 - </li>
+    <li> Mohammed Al-Mekhlafi (co-supervisé avec Prof. Gunes Karabulut Kurt), 2024 - </li>
   
 </ul>  
 
@@ -65,6 +64,7 @@ author_profile: true
 <!--<li>Christian Ngansop, 2023 -  </li>  -->
 <li> Laurence Leblanc (génie énergétique), 2023 - </li> 
 <li> Baptiste Salvi (génie énergétique), 2024 - </li> 
+<li> Romain Jonon, 2025 - </li> 
 </ul>  
 
 <h4>Stagiaires et visiteur.e.s</h4>
@@ -72,28 +72,36 @@ author_profile: true
 <ul style="list-style-type:disc;">
 
 <li>Tudor-Mihai Buhut, B.Ing.-stagiare (co-supervisé with Prof. Sébastien Le Digabel), été 2024, 2024 -</li>
-<li>Joséphine Gobert, visiteure M2 (ENAC) (co-supervisée with Prof. Sébastien Le Digabel), été 2024.</li>
 </ul> 
 
 <hr size="10px" />
 
 <h2>Alumni</h2>
 
+<h4>Ph.D.</h4>
+
+<ul style="list-style-type:disc;"></ul>
+<li>Feng Li (co-supervisé avec Prof. Ilhan Kocar), 2021 - 2024</li>
+</ul>  
+
 <h4>M.A.Sc.</h4>
 
 <ul style="list-style-type:disc;">
-    <li>Jean-Luc Lupien, M.A.Sc. 2022 - 2023, maintenenant étudiant MSc à l'Université de Californie, Berkeley.</li>   
-    <li>Philippe Maisonneuve, M.A.Sc. (génie énergétique), 2022 - 2023, maintenant Fireraven. </li> 
+    <li>Jean-Luc Lupien, 2022 - 2023, maintenenant étudiant MSc à l'Université de Californie, Berkeley.</li>   
+    <li>Philippe Maisonneuv (génie énergétique), 2022 - 2023, maintenant Fireraven. </li> 
     <li>Jean-William Lauzon (co-supervisé avec Prof. Ilhan Kocar), 2022 - 2023, maintenant CPI en réseaux de puissance à Eaton.</li>     
     <li>Marie-Christine Paré (génie énergétique), 2021 - 2023, maintenant à la Régie de l'Énergie du Québec.</li>     
     <li>Fatemeh Rajabi (mathematiques appliquées, co-supervisée with Prof. Antoine Legrain), 2022 - 2024, maintenant à Heylist. </li>     
     <li>Olivier Bélanger (co-supervisé with Prof. Gunes Karabulut Kurt), 2023 - 2024, maintenant à Rambus.</li>  
+    <li>Matthias Molenat (co-supervisé avec Prof. Jean Mahseredjian), 2022 - 2024, maintenant à Eclipse.</li>
 </ul>  
 
 <h4>Chercheur.e.s postdoctoral.e.s</h4>
 
 <ul style="list-style-type:disc;">
-    <li>Christian Bingane (mathématiques, co-supervisé avec Prof. Hanane Dagdougui), 2022 - 2023, maintenant professeur agrégé à l'Université de Kinshasa.</li> 
+    <li>Christian Bingane (mathématiques, co-supervisé avec Prof. Hanane Dagdougui), 2022 - 2023, maintenant professeur associé à l'Université de Kinshasa.</li> 
+    <li> Samuel Muhindo (Mathematiques, co-supervisé with Prof. Hanane Dagdougui), 2024 - 2024.</li>
+    <li> Zineb Garroussi (co-supervisée with Prof. Brunilde Sanso, Prof. Gunes Karabulut Kurt, et Prof. Jean-François Frigon), 2023 - 2024.</li>  
     </ul>  
 
 <h4>M.Ing.</h4>
@@ -115,4 +123,5 @@ author_profile: true
 <li>Alexis Caraud, visiteur M2 (ENAC) (co-supervisé avec Prof. Sébastien Le Digabel), été 2023, maintenant étudiant PhD à Polytechnique Montréal. </li>    
 <li>Stéphane Salim, visiteur M2 (ENAC) (co-supervisé avec Prof. Sébastien Le Digabel), été 2023, maintenant à Paris Aéroport. </li>        
 <li>Adam Osmani, B.Ing.-stagiaire (co-supervisé avec Prof. Gunes Karabulut Kurt), été 2023, 2023 - 2024, maintenant étudiant MSc à Polytechnique Montréal.</li>
+<li>Joséphine Gobert, visiteure M2 (ENAC) (co-supervisée with Prof. Sébastien Le Digabel), été 2024.</li>
 </ul>  
