--- a/_pages/group.html
+++ b/_pages/group.html
@@ -81,15 +81,15 @@ author_profile: true
 <h4>Ph.D.</h4>
 
 <ul style="list-style-type:disc;"></ul>
-<li>Feng Li (co-supervisé avec Prof. Ilhan Kocar), 2021 - 2024</li>
-</ul>  
+    <li>Feng Li (co-supervisé avec Prof. Ilhan Kocar), 2021 - 2024, maintenant à Eaton</li>
+    </ul>  
 
 <h4>M.A.Sc.</h4>
 
 <ul style="list-style-type:disc;">
-    <li>Jean-Luc Lupien, 2022 - 2023, maintenenant étudiant MSc à l'Université de Californie, Berkeley.</li>   
+    <li>Jean-Luc Lupien, 2022 - 2023, maintenenant étudiant PhD à l'Université de Californie, Berkeley.</li>   
     <li>Philippe Maisonneuv (génie énergétique), 2022 - 2023, maintenant Fireraven. </li> 
-    <li>Jean-William Lauzon (co-supervisé avec Prof. Ilhan Kocar), 2022 - 2023, maintenant CPI en réseaux de puissance à Eaton.</li>     
+    <li>Jean-William Lauzon (co-supervisé avec Prof. Ilhan Kocar), 2022 - 2023, maintenant à Eaton.</li>     
     <li>Marie-Christine Paré (génie énergétique), 2021 - 2023, maintenant à la Régie de l'Énergie du Québec.</li>     
     <li>Fatemeh Rajabi (mathematiques appliquées, co-supervisée with Prof. Antoine Legrain), 2022 - 2024, maintenant à Heylist. </li>     
     <li>Olivier Bélanger (co-supervisé with Prof. Gunes Karabulut Kurt), 2023 - 2024, maintenant à Rambus.</li>  
@@ -118,7 +118,7 @@ author_profile: true
 <ul style="list-style-type:disc;">
 
 <li>Félix Pellerin, B.Ing.-stagiaire, été 2021, maintenant étudiant PhD à l'Université de Montréal.</li>
-<li>Olivier Daoust, B.Ing.-stagiaire (co-supervisé avec Prof. Gunes Karabulut Kurt), été 2022, 2022 - 2023.</li>
+<li>Olivier Daoust, B.Ing.-stagiaire (co-supervisé avec Prof. Gunes Karabulut Kurt), été 2022, 2022 - 2023, maintenant étudiant MSc à Polytechnique Montréal</li>
 <li>Yu-Hsin Wu, visiteur Ph.D. (Nagoya University), été 2023. </li>
 <li>Alexis Caraud, visiteur M2 (ENAC) (co-supervisé avec Prof. Sébastien Le Digabel), été 2023, maintenant étudiant PhD à Polytechnique Montréal. </li>    
 <li>Stéphane Salim, visiteur M2 (ENAC) (co-supervisé avec Prof. Sébastien Le Digabel), été 2023, maintenant à Paris Aéroport. </li>        
