--- a/_pages/group.html
+++ b/_pages/group.html
@@ -30,7 +30,6 @@ author_profile: true
 <li>Loreley Sepho (mathématiques appliquées, co-supervisée avec Prof. Hanane Dagdougui), 2022 - </li> 
 <li>Bouh Abdillahi (co-supervisé avec Prof. Gunes Karabulut Kurt), 2023 - </li>  
 <li>Christina G. Soldati (co-supervisée avec Prof. Sébastien Le Digabel), 2023 - </li>  
-<li>Samuel Mendoza (co-supervisé avec Prof. Sébastien Le Digabel), 2023 - </li> 
 <li>Étienne Tremblay, 2023 - </li>  
 <li>Julien Pallage, 2023 - </li>     
 <li>Victor Darleguy (génie énergétique), 2023 - </li>     
@@ -94,6 +93,7 @@ author_profile: true
     <li>Fatemeh Rajabi (mathematiques appliquées, co-supervisée with Prof. Antoine Legrain), 2022 - 2024, maintenant à Heylist. </li>     
     <li>Olivier Bélanger (co-supervisé with Prof. Gunes Karabulut Kurt), 2023 - 2024, maintenant à Rambus.</li>  
     <li>Matthias Molenat (co-supervisé avec Prof. Jean Mahseredjian), 2022 - 2024, maintenant à Eclipse.</li>
+    <li>Samuel Mendoza (co-supervisé avec Prof. Sébastien Le Digabel), 2023 - 2024.</li> 
 </ul>  
 
 <h4>Chercheur.e.s postdoctoral.e.s</h4>
