--- a/_pages/group.html
+++ b/_pages/group.html
@@ -35,6 +35,7 @@ author_profile: true
 <li>Victor Darleguy (génie énergétique), 2023 - </li>     
 <li>Julie Durette (co-supervisée avec Prof. Gunes Karabulut Kurt), 2023 - </li> 
 <li>Mohamad Charara (mathématiques appliquées, co-supervisé avec Prof. Hanane Dagdougui), 2023 - </li> 
+<li>Vincent St-Pierre (à l'Université du Québec à Rimouski, co-supervisé avec Prof. Maxime Berger), 2023 - </li>  
 <li>Xavier Audet (génie énergétique), 2024 - </li>
 <li>Donald Fisher (co-supervisé avec Prof. Keyhan Sheshyekani), 2024 - </li>
 <li>Jérôme Lafontaine (co-supervisé avec Prof. Maxime Berger), 2024 - </li> 
